[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.2",
]
dev = [
    "black>=23.1.0",
    "ruff>=0.0.256",
    "mypy>=1.1.1",
]
build = [
    "nuitka>=1.5.3",
]

[project]
name = "lazydog_sqlite_merge"
version = "0.1.0"
description = "Merge sqlite db files"
authors = [
    {name = "Francis Hillman", email = "dj.after.burn@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}

[project.scripts]
lazydog_merge_sqlite = "lazydog_merge_sqlite.__main__:main"